k8s/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms-ticket-local
  labels:
    name: ms-ticket-local
