k8s/overlays/local/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-ticket
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: ms-ticket
          imagePullPolicy: Never
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
