k8s/overlays/local/keycloak-patch-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30881
