k8s/overlays/local/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-ticket-nodeport
spec:
  selector:
    app: ms-ticket
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
  type: NodePort
