k8s/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-ticket
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: ms-ticket.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-ticket-service
                port:
                  number: 80
